--- a/blog-preview-card-main/styles.css
+++ b/blog-preview-card-main/styles.css
@@ -1,1 +1,109 @@
+/*global css*/
+html{
+    height: 100%;
+    width: 100%;
+}
+
+body{
+    /*min-height: 100%;
+    min-width: 100%;*/
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    place-items: center;
+    margin: 0;
+    padding: 0;
+    background-color: hsl(47, 88%, 63%);
+    font-family: 'Figtree', sans-serif;
+}
+
 /*design mobile first*/
+@media only screen and (max-width:375px){
+
+.content{
+    display: flex;
+    justify-content: center;
+
+}
+
+.card-container{
+    background-color:hsl(0, 0%, 100%);
+    height: 65vh;
+    width: 75vw;
+    /*margin: 0 25px;*/
+    padding-inline: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 15px;
+    border-style: solid;
+    border-width: 2px;
+    box-shadow: 8px 8px 0px 0px rgba(0,0,0,1);
+}
+
+.card-content{
+    display: flex;
+    flex-direction: column;
+
+}
+
+#article-pic{
+    width: 100%;
+    border-radius: 10px;
+}
+
+.topic{
+    background-color: hsl(47, 88%, 63%);
+    width: max-content;
+    height: max-content;
+    padding: 5px 20px;
+    border-radius: 10px;
+    font-size: 16px;
+    margin-top: 30px;
+}
+
+.publishing-date{
+    font-size: 16px;
+    margin: 0;
+}
+
+.title{
+    font-size: 20px;
+    margin-top: 15px;
+}
+
+.description{
+    font-size: 14px;
+    margin: 0;
+    margin-top: 5px;
+    color: hsl(0, 0%, 50%);
+}
+
+.author-container{
+    display: flex;
+    align-items: center;
+    margin-top: 15px;
+
+}
+
+#author-pic{
+    height:38px;
+}
+
+.author{
+    font-size: 16px;
+    margin-left: 15px;
+    font-weight: 800;
+}
+
+.attribution{
+    display: flex;
+    flex-direction: column;
+}
+}
+
+
+
+/*design for desktop*/
+@media only screen and (min-width:768px){
+
+}
