--- a/blog-preview-card-main/styles.css
+++ b/blog-preview-card-main/styles.css
@@ -5,12 +5,12 @@ html{
 }
 
 body{
-    /*min-height: 100%;
-    min-width: 100%;*/
-    height: 100vh;
-    width: 100vw;
-    display: grid;
-    place-items: center;
+    min-height: 100%;
+    min-width: 100%;
+    /*height: 100vh;
+    width: 100vw;*/
+    /*display: grid;
+    place-items: center;*/
     margin: 0;
     padding: 0;
     background-color: hsl(47, 88%, 63%);
@@ -18,12 +18,13 @@ body{
 }
 
 /*design mobile first*/
-@media only screen and (max-width:375px){
+/*@media only screen and (max-width:375px){*/
 
 .content{
-    display: flex;
-    justify-content: center;
-
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    place-items: center;
 }
 
 .card-container{
@@ -96,10 +97,16 @@ body{
 }
 
 .attribution{
-    display: flex;
-    flex-direction: column;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    font-size: 13px;
+    height: min-content;
+    text-align: center;
+    position: absolute;
+    bottom: 5px;
 }
-}
+/*}*/
 
 
 
