--- a/blog-preview-card-main/styles.css
+++ b/blog-preview-card-main/styles.css
@@ -5,8 +5,9 @@ html{
 }
 
 body{
-    min-height: 100%;
-    min-width: 100%;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
     /*height: 100vh;
     width: 100vw;*/
     /*display: grid;
@@ -104,7 +105,7 @@ body{
     height: min-content;
     text-align: center;
     position: absolute;
-    bottom: 5px;
+    bottom: 10px;
 }
 /*}*/
 
@@ -112,5 +113,8 @@ body{
 
 /*design for desktop*/
 @media only screen and (min-width:768px){
-
+    .card-container{
+        height: 400px;
+        width: 250px;
+    }
 }
